add more description to the page

--- a/cipher.html
+++ b/cipher.html
@@ -10,7 +10,7 @@
 <body>
   <div class = "container">
     <h1>Cipher</h1>
-    <p>Click the images</p>
+    <p>Click the dog to see a code. Then click the cat to decipher it!</p>
     <div class="row">
       <div class="col-6">
         <p id="dog"><img src="img/dog.jpeg" id="crypt" class="img-center"></p>
