fixed a bug with showing two sentences

--- a/cipher.html
+++ b/cipher.html
@@ -18,8 +18,8 @@
       <div class="col-6">
         <p id="cat"><img src="img/cat.jpeg" class="img-center"></p>
       </div>
-
         <p id="target"></p>
+        <p id="target-hidden"></p>
         <p id = "original"></p>
       </p>
     </div>
