fix double sentence bug when clicking cat first

--- a/cipher.html
+++ b/cipher.html
@@ -18,11 +18,20 @@
       <div class="col-6">
         <p id="cat"><img src="img/cat.jpeg" class="img-center"></p>
       </div>
-        <p id="target"></p>
-        <p id="target-hidden"></p>
-        <p id = "original"></p>
-      </p>
+      <div id="all">
+        <div id ="target-show">
+          <p id="target"></p>
+        </div>
+        <div id="target-hide">
+        </div>
+        <div id="og-show">
+          <p id = "original"></p>
+        </div>
+      </div>
+      <div id="all-hidden">
+      </div>
     </div>
+
   </div>
   </script>
 </body>
