add the radio form to calcultor

--- a/calc.html
+++ b/calc.html
@@ -104,12 +104,12 @@
       <div class='col-4'>
         <form id='calc'>
           <div class='form-group'>
-            <label for='op1'>1st number</label>
-            <input id='op1' type='text' class='form-control'>
+            <label for='radio1'>1st number</label>
+            <input id='radio1' type='text' class='form-control'>
           </div>
           <div class='form-group'>
-            <label for='op2'>2nd Number</label>
-            <input id='op2' type='text' class='form-control'>
+            <label for='radio2'>2nd Number</label>
+            <input id='radio2' type='text' class='form-control'>
           </div>
           <div class='radio'>
             <label>
@@ -135,9 +135,9 @@
               divide
             </label>
           </div>
-          <button type='submit' class='btn btn-danger'>Go!</button>
+          <button type='submit' class='btn btn-warning'>Go!</button>
         </form>
-        <div id='radio-all' class='result'>        
+        <div id='radio-all' class='radio-result'>        
         </div>
       </div>
     </div>
