--- a/calc.html
+++ b/calc.html
@@ -93,7 +93,7 @@
             <option value='divide'>Divide</option>
             <option value='multiply'>Multiply</option>
           </select>
-          <button type='submit' class='btn btn-danger'>Calculate</button>
+          <button type='submit' class='btn btn-danger'>Go!</button>
         </form>
         <div id='output-all' class='select-result'>        
         </div>
