--- a/vote.html
+++ b/vote.html
@@ -4,7 +4,7 @@
   <link href='css/bootstrap.css' rel='stylesheet' type='text/css'>
   <link href='css/vote-styles.css'rel='stylesheet'type='text/css'>
   <script src='js/jquery-3.6.0.js'></script>
-  <script src='js/vote-scripts.js'></script>
+  <script src='js/vote2-scripts.js'></script>
   <title>Voting</title>
 </head>
 <body>
