fixed the triangle error when you do not input any numbers

--- a/triangle.html
+++ b/triangle.html
@@ -31,7 +31,7 @@
 
 
     <div id="output1">
-      <h1>This is a <span class="tri-type"></span> triangle.</h1>
+      <h1>Triangle Type: <span class="tri-type"></span></h1>
     </div>
     <div id="output2">
       <h1>Sorry, no triangle for you.</h1>
